Use npm install for dependencies

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install server dependencies
       run: |
         cd server
-        npm ci
+        npm install
     - name: Install Python dependencies
       run: python3 -m pip install pycodestyle
     - name: Run tests
